@@ -1,3 +1,10 @@
+Mon Sep 22 09:28:43 2014  Eric Wong  <e@80x24.org>
+
+	* ext/socket/ancdata.c ({send,recv}msg_args_struct): 24 => 16 bytes
+	* ext/socket/init.c (connect_arg): ditto
+	* ext/socket/raddrinfo.c (getnameinfo_arg): 56 => 48 bytes
+	  (reductions only for 64-bit systems)
+
 Mon Sep 22 02:04:25 2014  Tanaka Akira  <akr@fsij.org>
 
 	* lib/drb/drb.rb: Support graceful shutdown.
